force-app/main/default/objects/WorkRamp_Assignment_Log__c/WorkRamp_Assignment_Log__c.object-meta.xml
<CustomObject>
    <description>Log of all errors and other relevant information that descends from DML operations on the WorkRamp Assignment custom object</description>
    <label>WorkRamp Assignment Log</label>
    <nameField>
        <label>WorkRamp Assignment Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkRamp Assignment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>