force-app/main/default/objects/WorkRamp_Assignment_Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Apex Class from which the log was generated</description>
    <inlineHelpText>Apex Class from which the log was generated</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>