force-app/main/default/objects/WorkRamp_Assignment_Log__c/fields/WorkRamp_Assignment__c.field-meta.xml
<CustomField>
    <fullName>WorkRamp_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If applicable, ID of the WorkRamp Assignment record that this log is related to</description>
    <inlineHelpText>If applicable, ID of the WorkRamp Assignment record that this log is related to</inlineHelpText>
    <label>WorkRamp Assignment</label>
    <referenceTo>WorkRamp_Assignment__c</referenceTo>
    <relationshipLabel>WorkRamp Assignment Logs</relationshipLabel>
    <relationshipName>WorkRamp_Assignment_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>